more pages added, styling looking better

--- a/pages/Index.html
+++ b/pages/Index.html
@@ -3,11 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Welcome to Coburg</title>
-		<link rel="stylesheet" href="../css/Coburg.css"> 
+		<link rel="stylesheet" href="../css/Coburg.css">
 		<link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
+		<div class="top">
 		<header>
 			<nav>
 				<ul>
@@ -19,10 +21,20 @@
 			</nav>
 
 		</header>
+		
 		<section class="hero">
-		<h1>Welcome to Coburg</h1>
-				<p>the suburb with everthing you need</p>
+			<h1>WELCOME TO COBURG</h1>
+					<p>the jewel of the north.</p>
 		</section>
+		</div>
+		<section class="search">
+			<form> 
+			<p>What are you looking for?</p>
+			<input type="text" id="mainSearch"> <input type="submit" value="Search">
+			</form>
+
+		</section>
+
 
 	</body>
 
