--- a/pages/Index.html
+++ b/pages/Index.html
@@ -29,7 +29,7 @@
 				<h1 id="hero">WELCOME TO COBURG</h1>
 			</div>
 			<div id="tagline">
-				<h4>the jewel of the north.</h4>
+				<h4>the jewel of the north</h4>
 			</div>
 		</section>
 		</div>
@@ -38,8 +38,8 @@
 		<h3>What are you looking for?</h3>
 		<p>(There's more here than an old prison.)</p>
 			<form> 
-				<input type="text" id="mainSearch"> 
-				<p><a href ="x">Search</a></p>
+				<input type="text" id="mainSearch" title="You could look for a 'florist', 'pharmacy' or 'coffee'."> 
+				<p><a href ="menus/search_results.html">search</a></p>
 			</form>
 		</div>
 
