--- a/pages/menus/meals.html
+++ b/pages/menus/meals.html
@@ -7,62 +7,116 @@
 		<link rel="stylesheet" href="../../css/Coburg.css">
 		<!--FONTS-->
 		<link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
+		<!--JS-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="../../js/coburg.js"></script>
 </head>
 <body>
 
 	<div class="top">
-	<div class="container">
-		<header>
-			<nav>
-				<ul>
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="meals.html">Meals</a></li>
-					<li><a href="services.html">Services</a></li>
-					<li><a href="shops.html">Shops</a></li>
-					<li><a href="markets.html">Markets</a></li>
-				</ul>
-			</nav>
-		</header>
+		<div class="container">
+			<header>
+				<nav>
+					<ul>
+						<li><a href="../index.html">Home</a></li>
+						<li><a href="meals.html">Meals</a></li>
+						<li><a href="services.html">Services</a></li>
+						<li><a href="shops.html">Shops</a></li>
+						<li><a href="markets.html">Markets</a></li>
+					</ul>
+				</nav>
+			</header>
 
-		<section>
-			<h1>Tasty Times</h1>
+			<section>
+				<h1>Tasty Times</h1>
 
-			<p>You won't find a better Lebanese cheese pie in Melbourne, we promise. But that's not all: should you fancy a dumpling, some Thai or even a tex mex breakfast, Coburg has you covered.</p>
-		</section>
+				<p>Pot mofo dizzle quizzle nisi aliquam mollizzle. Pot potenti. Mofo odio. Vivamizzle neque. Pimpin' crazy. Crizzle mauris mauris, bizzle a, feugizzle sizzle amizzle, malesuada izzle, tellivizzle.</p>
+			</section>
 		</div>
 	</div>
 
 	<div class="results">
 		<div class="container">
 
-				<section class="oneResult">
-				<img src="../../images/thumbs/true-north-thumb.png" alt="interior of True North cafe">
+			<a href="../meals/poh.html"><img src="../../images/thumbs/poh-thumb.png" alt="interior of the Post Office Hotel"></a>
+				<div class="shortDesc">
+					<h2><a href="../meals/poh.html">The Post Office Hotel</a></h2>
+					<h3><span class="icon-coffee"></span><span class="icon-cutlery23"></span><span class="icon-mug"></span></h3>
+						<p class="spruik">Donec get down get down sheezy maurizzle. Check out this a mammasay mammasa mamma oo sa izzle boofron pretizzle tincidunt.</p>
+					<div class="Details">
+						<p class="seeDetails"><a href="#" class="showMore">See more details</a><br>
+							<div class="addressHours">
+								229-231 Sydney Road, Coburg, 11:00am - late all week<br>
+								<a href="../meals/poh.html">See all the details</a>
+							</div> 
+						</p>
+					</div>
+				</div>
+		
+	
+
+			<a href="../meals/true-north.html"><img src="../../images/thumbs/true-north-thumb.png" alt="interior of True North cafe"></a>
+				<div class="shortDesc">
 				<div class="shortDesc">
 					<h2><a href="../meals/true-north.html">True North</a></h2>
 					<h3><span class="icon-coffee"></span><span class="icon-cutlery23"></span></h3>
-						<p>These guys serve all you can drink filter coffee and a bunch of succulent, American-tinged dishes. Grab a booth or a takeaway on your way to the train station.</p>
-						<ul>
-							<li>12a Munro Street, Coburg</li>
-							<li>7:00am - 4:00pm weekdays, 8:00am - 4:00pm weekends</li>
-							<li><a href="http://www.truenortharcher.com/">truenortharcher.com</a></li>
-						</ul>
+						<p class="spruik">These guys serve all you can drink filter coffee and a bunch of succulent, American-tinged dishes. Grab a booth or a takeaway on your way to the train station.</p>
+						<div class="Details">
+							<p class="seeDetails"><a href="#" class="showMore">See more details</a><br>
+								<div class="addressHours">
+									12a Munro Street, Coburg, 7:00am - 4:00pm weekdays, 8:00am - 4:00pm weekends<br>
+									<a href="../meals/true-north.html">See all the details</a>
+								</div>
+							</p>
+						</div>
 				</div>
-				</section>
 
-				<section class="oneResult">
-				<img src="../../images/thumbs/wild-timor-thumb.png" alt="interior of Wild Timor cafe">
+				
+				<a href="../meals/true-north.html"><img src="../../images/thumbs/wild-timor-thumb.png" alt="interior of Wild Timor cafe"></a>
 				<div class="shortDesc">
 					<h2><a href="../meals/true-north.html">Wild Timor Coffee</a></h2>
 					<h3><span class="icon-coffee"></span><span class="icon-cutlery23"></span></h3>
-						<p>Fair trade coffee grown in East Timor, roasted in Melbourne and brewed just right. The cold drip will make you cry tears of joy. A tasty selection of raw treats and varied breakfast and lunch foods are also available.</p>
-						<ul>
-							<li>282 Sydney Road, Coburg</li>
-							<li>Breakfast, Lunch, Afternoon tea</li>
-							<li><a href="http://www.wildtimorcoffee.com/cafe.html">wildtimorcoffee.com</a></li>
-						</ul>
+						<p class="spruik">Fair trade coffee grown in East Timor, roasted in Melbourne and brewed just right. The cold drip will make you cry tears of joy. A tasty selection of raw treats and varied breakfast and lunch foods are also available.</p>
+						<div class="Details">
+							<p class="seeDetails"><a href="#" class="showMore">See more details</a><br>
+								<div class="addressHours">
+									282 Sydney Road, Coburg, Breakfast, Lunch, Afternoon tea<br>
+									<a href="../meals/true-north.html">See all the details</a> 
+								</div>
+							</p>
+						</div>
 				</div>
-				</section>
-		</div>
+
+				<a href="../meals/rubys.html"><img src="../../images/thumbs/rubys-thumb.png" alt="interior of Ruby's cafe"></a>
+				<div class="shortDesc">
+					<h2><a href="../meals/rubys.html">Ruby's Cafe</a></h2>
+					<h3><span class="icon-coffee"></span><span class="icon-cutlery23"></span></h3>
+						<p class="spruik">Break yo neck, yall; Mah nizzle check it out. Pellentesque mammasay mammasa mamma oo sa morbi tristique senectus et netizzle shizzle my nizzle crocodizzle boofron famizzle izzle turpizzle shit.</p>
+							<div class="Details">
+								<p class="seeDetails"><a href="#" class="showMore">See more details</a><br>
+									<div class="addressHours">
+										138 Nicholson Street, Coburg, 7:00am - 4:30pm weekdays, 8:00am - 4:00pm weekends <br>
+										<a href="../meals/rubys.html">See all the details</a> 
+									</div>
+								</p>
+							</div>
+				</div>
+
+				<a href="../meals/zaatar.html"><img src="../../images/thumbs/zaatar-thumb.png" alt="interior of Zaatar"></a>
+				<div class="shortDesc">
+					<h2><a href="../meals/zaatar.html">Zaatar</a></h2>
+					<h3><span class="icon-coffee"></span><span class="icon-cutlery23"></span></h3>
+						<p class="spruik">Break yo neck, yall; Mah nizzle check it out. Pellentesque mammasay mammasa mamma oo sa morbi tristique senectus et netizzle shizzle my nizzle crocodizzle boofron famizzle izzle turpizzle shit.</p>
+						<div class="Details">
+							<p class="seeDetails"><a href="#" class="showMore">See more details</a><br>
+								<div class="addressHours">
+									282 Sydney Road, Coburg, 7:00am - 8:00pm everyday<br>
+									<a href="../meals/zaatar.html">See all the details</a>  
+								</div>
+							</p>
+					</div>
+				</div>
+		</div>		
 	</div>
 
 	<footer>
@@ -73,9 +127,6 @@
 		 	</ul>
 		 	<p>© Coburg Life 2015.</p>
 	</footer>
-
-
-
 
 </body>
 </html>
